# practice-project-1

./: .gitignore  .travis.yml  .travis.yml~  CMakeLists.txt  LICENSE  README.md  annotated.html  calculator_8h_source.html  classes.html  classpp_1_1Calculator-members.html  classpp_1_1Calculator.html  files.html  functions.html  functions_func.html  functions_rela.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacepp.html  namespaces.html
docs/: Doxyfile
include/: calculator.h  sum.h
search/: all_61.js  all_63.js  all_64.js  all_6f.js  all_70.js  classes_63.js  functions_63.js  functions_6d.js  functions_73.js  related_70.js  search.js
src/: calculator.cpp  main.cpp  main.cxx  sum.cpp
test/: cpp_sum_test.cpp
